crates/effects/tests/snapshots/golden__all_rules_status_change.snap
---
source: crates/effects/tests/golden.rs
expression: effects
---
[
  {
    "kind": "proto.notice",
    "rule_id": "task_conventions",
    "seq": 0,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "aaa",
    "fingerprint_after": "bbb",
    "args": {
      "message": "`status` changed — valid values: todo, in-progress, blocked, review, done."
    }
  },
  {
    "kind": "daemon.refresh_view",
    "rule_id": "task_conventions",
    "seq": 1,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "aaa",
    "fingerprint_after": "bbb",
    "args": {
      "view": "tasks"
    }
  },
  {
    "kind": "md.append_section",
    "rule_id": "status_log",
    "seq": 0,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "aaa",
    "fingerprint_after": "bbb",
    "args": {
      "content": "status changed at bbb",
      "section": "Log"
    }
  }
]
