crates/effects/tests/snapshots/golden__broadcast_outbox_send.snap
---
source: crates/effects/tests/golden.rs
expression: effects
---
[
  {
    "kind": "proto.send",
    "rule_id": "broadcast_outbox",
    "seq": 0,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "v1",
    "fingerprint_after": "v2",
    "args": {
      "message": "BROADCAST.md changed (v2) — re-read it.",
      "to": [
        "all"
      ]
    }
  }
]
