crates/effects/tests/snapshots/golden__status_binding_drift.snap
---
source: crates/effects/tests/golden.rs
expression: effects
---
[
  {
    "kind": "proto.warn",
    "rule_id": "status_binding",
    "seq": 0,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "aaa",
    "fingerprint_after": "bbb",
    "args": {
      "message": "The Status section changed but the frontmatter `status` field did not — they may be out of sync.",
      "section": "Status"
    }
  }
]
