crates/effects/tests/snapshots/golden__status_log_append.snap
---
source: crates/effects/tests/golden.rs
expression: effects
---
[
  {
    "kind": "md.append_section",
    "rule_id": "status_log",
    "seq": 0,
    "depth": 0,
    "plane": "change",
    "fingerprint_before": "aaa",
    "fingerprint_after": "bbb",
    "args": {
      "content": "status changed at bbb",
      "section": "Log"
    }
  }
]
